--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Firebase Configuration -->
+    <string name="firebase_api_key">AIzaSyCt5GocTEpVcwE7VmlqRzyy3Ndg67bKQ_Y</string>
+    <string name="firebase_project_id">ecommerce-4963a</string>
+    <string name="firebase_app_id">1:268987935569:android:3e0c44d4933d70709fc170</string>
+    <string name="firebase_messaging_sender_id">268987935569</string>
+    <string name="firebase_database_url">https://ecommerce-4963a-default-rtdb.firebaseio.com</string>
+
     <!-- Theme applied to the Android Window while the process is starting when the OS's Dark Mode setting is off -->
     <style name="LaunchTheme" parent="@android:style/Theme.Light.NoTitleBar">
         <!-- Show a splash screen on the activity. Automatically removed when
              the Flutter engine draws its first frame -->
         <item name="android:windowBackground">@drawable/launch_background</item>
     </style>
+
     <!-- Theme applied to the Android Window as soon as the process has started.
          This theme determines the color of the Android Window while your
          Flutter UI initializes, as well as behind your Flutter UI while its
@@ -16,3 +24,4 @@
         <item name="android:windowBackground">?android:colorBackground</item>
     </style>
 </resources>
+
